# beelay-iroh-chat

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  tailwind_input.css
ipc_layer/: Cargo.toml
ipc_layer/src/: lib.rs  tauri.rs
ipc_macros/: Cargo.toml
ipc_macros/src/: lib.rs
ipc_macros/tests/: test_derivations_commands_tauri.rs  test_derivations_commands_ui.rs  test_derivations_events.rs  test_derivations_events_tauri.rs  test_derivations_events_ui.rs
src/: app.rs  ipc.rs
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/src/: ipc.rs  lib.rs  main.rs  state.rs
