[package]
name = "beelay-chat-ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
tauri-sys = { git = "https://github.com/Zyell/tauri-sys.git", branch = "v2_adjustments", features = ["core"] }

[workspace]
members = ["src-tauri"]
