[package]
name = "beelay-chat-ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
tauri-sys = { git = "https://github.com/Zyell/tauri-sys.git", branch = "v2_adjustments", features = ["core", "event"] }
chrono = { version = "0.4.41", features = ["serde"]}
fast_qr = { version = "0.13.0", features = ["svg"] }
futures = "0.3.31"

[features]
default = []
mobile = []
android = ["mobile"]
ios = ["mobile"]
desktop = []

[workspace]
members = [ "ipc_layer", "ipc_macros","src-tauri"]
