[package]
name = "ipc_layer"
version = "0.1.0"
edition = "2024"

[dependencies]
ipc_macros = {path = "../ipc_macros"}
tauri-sys = { git = "https://github.com/Zyell/tauri-sys.git", branch = "v2_adjustments", features = ["core", "event"], optional = true }
tauri = { version = "2", features = [], optional = true }
chrono = { version = "0.4.41", features = ["serde"]}
serde = { version = "1.0.219", features = ["derive"] }
once_cell = { version = "1.21.3", optional=true }
beelay_protocol = {path = "/var/home/zyell/RustroverProjects/beelay_exploration/beelay_protocol", optional=true}
#beelay_protocol = {git = "https://github.com/symplasma/custom_beelay_iroh_protocol.git", branch="main", optional = true}
postcard = { version = "1.1.1", optional = true }
futures-core = { version = "0.3.31", optional = true }

[features]
ui = ["dep:tauri-sys","dep:futures-core"]
tauri = ["dep:tauri", "dep:beelay_protocol", "dep:once_cell", "dep:postcard"]
mobile = []
android = ["mobile"]
ios = ["mobile"]